--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,3 @@
-<div ="footer" class="page_margins">This document was written in 2011
-  <address>
-    <a href="mailto:kenrome@gmail.com">Email Me</a><br />
-		&copy;
-  </address>
+<div ="footer" class="page_margins">
+    <a href="mailto:kenrome@gmail.com">&copy;</a><br />
 </div>
