--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tag %>
 <script language = "javascript">
 	$(document).ready(function(){
-		//
+		//check input tag
 		$("#name").focus(function(){
 			if ($(this).attr('value') == "Describe your feelings on this picture"){
 				$(this).attr('value', '');
