--- a/app/views/pages/tag_cloud.html.erb
+++ b/app/views/pages/tag_cloud.html.erb
@@ -1,5 +1,6 @@
 <div id="tag_cloud" class="page_margins" >
 	<% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
-		<%= link_to tag.name, { :action => :tag, :id => tag.name }, :class => css_class %>
+	<%# link_to "<span class ='color#{randi}'>#{tag.name}</span>", { :action => :tag, :id => tag.name }, :class => css_class %>
+<a href="/tag?id=<%=tag.name%>" class=<%=css_class%>><span class=color<%=randi%>><%=tag.name%></span></a>
 	<% end %>
 </div>
