--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <meta charset=utf-8 />
   <title>Enjoypicture</title> 
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :all %>
+  <%= stylesheet_link_tag :all, :cache => true %>
+  <%= javascript_include_tag :all, :cache => true %>
   <%= csrf_meta_tag %>
 <script language = "javascript">
 	$(document).ready(function(){
