--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,12 +81,9 @@
   .css3 { font-size: 1.8em; padding: 20px 8px; color: #3s33}
   .css4 { font-size: 2.6em; padding: 25px 14px; color: #399}
   .color0{ color: #cccccc;}
-  .color1{ color: #66CC33;}
-  .color2{ color: #CCFF00;}
-  .color3{ color: #99FF99;}
-  .color4{ color: #3399CC;}
-  .color5{ color: #0066FF;}
-  .color6{ color: #FF6600;}
-  .color7{ color: #FFCC66;}
-  .color8{ color: #CCCCFF;}
-  .color9{ color: #C0C0C0;}
+  .color1{ color: #666666;}
+  .color2{ color: #0011bb;}
+  .color3{ color: #ffaa22;}
+  .color4{ color: #00bb11;}
+  .color5{ color: #5500dd;}
+  .color6{ color: #333333;}
