--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -2,6 +2,32 @@
 
 @media screen, projection
 {
+* { margin:0; padding:0; }
+
+  body {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:95.00%;
+    color:#999;
+  }
+
+  table { width:auto; border-collapse:collapse; margin-bottom:0.5em; border-top:2px #888 solid; border-bottom:2px #888 solid; }
+  table caption { font-variant:small-caps; }
+  table.full { width:100%; }
+  table.fixed { table-layout:fixed; }
+
+  th,td { padding:0.5em; }
+  thead th { color:#000; border-bottom:2px #800 solid; }
+  tbody th { background:#e0e0e0; color:#333; }
+  tbody th[scope="row"], tbody th.sub { background:#f0f0f0; }
+
+  tbody th { border-bottom:1px solid #fff; text-align:left; }
+  tbody td { border-bottom:1px solid #eee; }
+
+  tbody tr:hover th[scope="row"],
+  tbody tr:hover tbody th.sub { background:#f0e8e8; }
+  tbody tr:hover td { background:#fff8f8; }
+
+
   .yform {
     margin:0 auto;
     padding:0px;
@@ -95,5 +121,11 @@
   .yform div.error label { color:#000; font-weight:bold; }
   .yform div.error .message { color:#800; }
 
- 
+   #contact_content{
+    border:1px #a66 solid;
+    background:#fff;
+	padding:5px 1em;
+	color:#4D87C7;
+	}
+   .contact_error{ display: none;}
 }
