--- a/app/views/layouts/baoxian028.html.erb
+++ b/app/views/layouts/baoxian028.html.erb
@@ -4,7 +4,7 @@
   <meta charset=utf-8 />
   <title>contacts management of baoxian028</title> 
   <%= csrf_meta_tag %>
-  <%= stylesheet_link_tag 'forms', :cache => true %>
+  <%= stylesheet_link_tag 'forms'%>
 </head>
 <body>
 <%= yield %>
