--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -9,6 +9,7 @@
     font-size:95.00%;
     color:#999;
   }
+  body { text-align: left; }
 
   table { width:auto; border-collapse:collapse; margin-bottom:0.5em; border-top:2px #888 solid; border-bottom:2px #888 solid; }
   table caption { font-variant:small-caps; }
